--- a/app/static/index.html
+++ b/app/static/index.html
@@ -418,6 +418,130 @@
             background-color: #868486;
             border: 4px groove #999;
         }
+
+        #alliance-wrapper {
+            background-color: #868486;
+            border: 4px groove #999;
+            flex: 2;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .gauge {
+            background: #e7e7e7;
+            box-shadow: 0 0 0 6px rgba(255, 255, 255, 0.09), 0 0 35px 5px rgba(255, 255, 255, 0.29);
+            width: 200px;
+            height: 100px;
+            border-radius: 100px 100px 0 0;
+            position: relative;
+            overflow: hidden;
+            /* safari fix */
+            -webkit-transform-style: flat;
+            -webkit-transform: translateZ(0px);
+        }
+
+        .gauge.min-scaled {
+            transform: scale(0.5);
+        }
+
+        .gauge-center {
+            content: '';
+            color: #fff;
+            width: 60%;
+            height: 60%;
+            background: #15222E;
+            border-radius: 100px 100px 0 0;
+            position: absolute;
+            box-shadow: 0 -13px 15px -10px rgba(0, 0, 0, 0.28);
+            right: 21%;
+            bottom: 0;
+            color: #fff;
+        }
+
+        .gauge-center::before {
+            content: '128';
+            font-size: 1.5em;
+            width: 100%;
+            padding: 10px 0 0 0;
+            text-align: center;
+            float: left;
+            -webkit-font-smoothing: antialiased;
+        }
+
+        .gauge-center::after {
+            content: 'Alliance';
+            width: 100%;
+            float: left;
+            opacity: .6;
+            text-align: center;
+            text-transform: uppercase;
+        }
+
+        .needle {
+            width: 78px;
+            height: 7px;
+            background: #15222E;
+            border-bottom-left-radius: 100%;
+            border-bottom-right-radius: 5px;
+            border-top-left-radius: 100%;
+            border-top-right-radius: 5px;
+            position: absolute;
+            bottom: 4px;
+            left: 20px;
+            transform-origin: 100% 4px;
+            animation: speed 5s infinite;
+        }
+
+        .slice-colors .st {
+            position: absolute;
+            bottom: 0;
+            width: 60px;
+            height: 0;
+            border-bottom: 80px solid #000;
+            border-left: 12px solid transparent;
+            border-right: 12px solid transparent;
+        }
+
+        .slice-colors .st.slice-item:nth-child(1) {
+            border-bottom-color: #E84C3D;
+            left: -2px;
+        }
+
+        .slice-colors .st.slice-item:nth-child(2) {
+            border-bottom-color: #e67e22;
+            transform: rotate(135deg);
+            transform-origin: right;
+            top: 12px;
+            left: -65px;
+        }
+
+        .slice-colors .st.slice-item:nth-child(3) {
+            border-bottom-color: #f1c40f;
+            transform: rotate(179deg);
+            transform-origin: right;
+            top: -20px;
+            left: -62px;
+            border-bottom-width: 90px;
+            border-left-width: 45px;
+            border-right-width: 45px;
+            width: 18px;
+        }
+
+        .slice-colors .st.slice-item:nth-child(4) {
+            border-bottom-color: #9baa1e;
+            transform: rotate(219deg);
+            transform-origin: right;
+            top: -23px;
+            left: 43px;
+        }
+
+        .slice-colors .st.slice-item:nth-child(5) {
+            border-bottom-color: #1eaa59;
+            transform: rotate(240deg);
+            transform-origin: right;
+            right: 52px;
+        }
     </style>
     <script defer src='vendor.js'></script>
     <script defer src='app.js'></script>
@@ -473,8 +597,22 @@
                                 </div>
                             </div>
                             <div class="row">
-                                <div class="col">
-                                    Alliance
+                                <div class="col" style="flex: 2">
+                                    <div id="alliance-wrapper">
+                                        <div id="alliance">
+                                            <div class="gauge">
+                                                <div class="slice-colors">
+                                                    <div class="st slice-item"></div>
+                                                    <div class="st slice-item"></div>
+                                                    <div class="st slice-item"></div>
+                                                    <div class="st slice-item"></div>
+                                                    <div class="st slice-item"></div>
+                                                </div>
+                                                <div class="needle" style="transform: rotate(75deg);"></div>
+                                                <div class="gauge-center"></div>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                                 <div class="col">
                                     Resources
