--- a/app/static/index.html
+++ b/app/static/index.html
@@ -97,7 +97,7 @@
             height: 200px;
         }
 
-        #minimap-ship {
+        .minimap-ship {
             position: absolute;
             z-index: 100;
 
@@ -615,7 +615,10 @@
                     </div>
                     <div id="minimap-wrapper">
                         <div id="minimap">
-                            <div id="minimap-ship"></div>
+                            <div id="minimap-ship-1" class="minimap-ship"></div>
+                            <div id="minimap-ship-2" class="minimap-ship"></div>
+                            <div id="minimap-ship-3" class="minimap-ship"></div>
+                            <div id="minimap-ship-4" class="minimap-ship"></div>
                         </div>
                     </div>
                 </div>
