--- a/app/static/index.html
+++ b/app/static/index.html
@@ -463,7 +463,7 @@
         }
 
         .gauge-center::before {
-            content: '128';
+            content: attr(data-before);
             font-size: 1.5em;
             width: 100%;
             padding: 10px 0 0 0;
