--- a/app/static/index.html
+++ b/app/static/index.html
@@ -892,19 +892,19 @@
                 </div>
                 <div id="phaser-game"></div>
                 <div class="item-buttons">
-                    <button id="item-laser" class="active">Laser</button>
+                    <button id="item-laser" class="active"><img src="assets/icon-laser.png" /><br/>Laser <span id="item-laser-count"></span></button>
                     <button id="item-torpedo"><img src="assets/icon-torpedo.png" /><br/>Torpedo <span id="item-torpedo-count"></span></button>
-                    <button id="item-mine">Proximity Mine <span id="item-mine-count"></span></button>
-                    <button id="item-hot-torpedo">Hot Torpedo <span id="item-hot-torpedo-count"></span></button>
-                    <button id="item-nuke">Nuke <span id="item-nuke-count"></span></button>
-                    <button id="item-bio">Bio <span id="item-bio-count"></span></button>
+                    <button id="item-mine"><img src="assets/icon-mine.png" /><br/>Proximity Mine <span id="item-mine-count"></span></button>
+                    <button id="item-hot-torpedo"><img src="assets/icon-hot-torpedo.png" /><br/>Hot Torpedo <span id="item-hot-torpedo-count"></span></button>
+                    <button id="item-nuke"><img src="assets/icon-nuclear.png" /><br/>Nuke <span id="item-nuke-count"></span></button>
+                    <button id="item-bio"><img src="assets/icon-bio.png" /><br/>Bio <span id="item-bio-count"></span></button>
                 </div>
-                <div>
-                    <button id="item-shields">Shields</button>
-                    <button id="item-cloak">Cloak</button>
-                    <button id="item-sun">Sun</button>
-                    <button id="item-warp">Warp</button>
-                    <button id="item-anti-bio">Anti-bio</button>
+                <div class="item-buttons">
+                    <button id="item-shields"><img src="assets/shield.png" /><br/>Shields <span id="item-shields-count"></span></button>
+                    <button id="item-cloak"><img src="assets/icon-cloak.png" /><br/>Cloak <span id="item-cloak-count"></span></button>
+                    <button id="item-sun"><img src="assets/icon-sun.png" /><br/>Sun <span id="item-sun-count"></span></button>
+                    <button id="item-warp"><img src="assets/icon-warp.png" /><br/>Warp <span id="item-warp-count"></span></button>
+                    <button id="item-anti-bio"><img src="assets/icon-anti-bio.png" /><br/>Anti-bio <span id="item-anti-bio-count"></span></button>
                 </div>
             </div>
         </div>
